<resources>
    <string name="app_name">TableTennis1</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_score">ScoreActivity</string>
    <string name="player1name">Player 1 </string>
    <string name="player2name">Player 2 </string>
    <string name="set3">3 SETS</string>
    <string name="set5">5 SETS</string>
    <string name="ok">OKAY !</string>
    <string name="p1">Player1</string>
    <string name="p2">Player2</string>
    <string name="scoreCard">TT SCORE CARD</string>
    <string name="okbtn">OK</string>
</resources>
